[gd_scene load_steps=6 format=2]

[ext_resource path="res://13_rezult/next.png" type="Texture" id=1]
[ext_resource path="res://13_rezult/rez04.png" type="Texture" id=2]
[ext_resource path="res://13_rezult/Pattaya-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://13_rezult/rezult04.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 3 )

[node name="rezult04" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Rez04" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 932.0
margin_top = 625.0
margin_right = 1262.0
margin_bottom = 703.0
texture_normal = ExtResource( 1 )

[node name="Label_nechet" type="Label" parent="."]
margin_left = 316.0
margin_top = 272.0
margin_right = 391.0
margin_bottom = 331.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "20%"
__meta__ = {
"_edit_lock_": true
}

[node name="Label_forma" type="Label" parent="."]
margin_left = 314.0
margin_top = 640.0
margin_right = 389.0
margin_bottom = 699.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "20%"
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
